--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -1,15 +1,22 @@
-<ion-tabs class="tabs-icon-top tabs-dark">
+<ion-view>
 
-  <ion-tab title="Browse" icon="ion-eye" ui-sref="home.browse.featured">
-      <ion-nav-view name="browse"></ion-nav-view>
-  </ion-tab>
-  <ion-tab title="Pin"  icon="ion-pin" ui-sref="home.pin">
-      <ion-nav-view name="pin"></ion-nav-view>
-  </ion-tab>
-  <ion-tab title="Profile" icon="ion-ios-person" ui-sref="home.profile">
-      <ion-nav-view name="profile"></ion-nav-view>
-  </ion-tab>
-  <ion-tab title="Post" icon="ion-ios-compose-outline" ui-sref="home.post">
-      <ion-nav-view name="post"></ion-nav-view>
-  </ion-tab>
-</ion-tabs>
+    <ion-header-bar align-title="center" class="bar-positive">
+        <h1 class="title">Lichen Scavenger Hunt</h1>
+    </ion-header-bar>
+
+    <ion-content>
+        <div style="text-align:center;" class="list card">
+
+            <div class="item item-body center">
+                <div style="max-width:500px;max-height:500px" class="item item-image">
+                    <img class="center" src="img/lichen1.png">
+                </div>
+                <h1><b>Be the first to find all the lichen colonies in Kansas City</b></h1>
+                <button class="button button-large button-positive" ui-sref="signin">
+                    Get Started
+                </button>
+            </div>
+
+        </div>
+    </ion-content>
+</ion-view>
