--- a/www/templates/pages/mainlocations.html
+++ b/www/templates/pages/mainlocations.html
@@ -6,32 +6,32 @@
     </ion-header-bar>
     <ion-content>
         <div class="list">
-            <a class="item icon-right item-thumbnail-left" href="#/locations/1">
+            <a class="item item-thumbnail-left item-icon-right" href="#/locations/1">
                 <img src="img/unionstation.jpg">
                 <h2>Union Station</h2>
                 <p>some things about union station
-                    <button class="button button-clear icon-right ion-chevron-right" i></button>
+                    <button class="button button-clear icon ion-chevron-right" i></button>
                 </p>
             </a>
-            <a class="item item-thumbnail-left" href="#/locations/2">
+            <a class="item item-thumbnail-left item-icon-right" href="#/locations/2">
                 <img src="img/plugprojects.jpg">
                 <h2>Plug Projects</h2>
                 <p>blah
-                    <button class="button button-clear icon-right ion-chevron-right" i></button>
+                    <button class="button button-clear icon ion-chevron-right" i></button>
                 </p>
             </a>
-            <a class="item item-thumbnail-left" href="#/locations/3">
+            <a class="item item-thumbnail-left item-icon-right" href="#/locations/3">
                 <img src="img/anitab.jpeg">
                 <h2>Anita B. Gorman</h2>
                 <p>blah
-                    <button class="button button-clear icon-right ion-chevron-right" i></button>
+                    <button class="button button-clear icon ion-chevron-right" i></button>
                 </p>
             </a>
-            <a class="item item-thumbnail-left" href="#/locations/4">
+            <a class="item item-thumbnail-left item-icon-right" href="#/locations/4">
                 <img src="img/maaa.jpg">
                 <h2>Mid-America Arts Alliance</h2>
                 <p>blah
-                    <button class="button button-clear icon-right ion-chevron-right" i></button>
+                    <button class="button button-clear icon ion-chevron-right" i></button>
                 </p>
             </a>
         </div>
